--- a/.github/workflows/test_install.yaml
+++ b/.github/workflows/test_install.yaml
@@ -33,9 +33,33 @@ jobs:
       - name: Remove moby-runc to resolve conflicts
         run: sudo apt remove moby-runc
       - name: Check Iaas
+        id: test_check_iaas
         continue-on-error: true
         run: ./bin/kubemarine check_iaas -c ./ci/config.yaml
+      - name: Collect check_iaas artifacts
+        if: failure() && steps.test_check_iaas.outcome == 'failure'
+        uses: actions/upload-artifact@v3
+        with:
+          name: test_check_iaas_dump
+          path: dump/
+          retention-days: 7
       - name: Install
+        id: test_install
         run: ./bin/kubemarine install -c ./ci/config.yaml --disable-cumulative-points
+      - name: Collect install artifacts
+        if: failure() && steps.test_install.outcome == 'failure'
+        uses: actions/upload-artifact@v3
+        with:
+          name: test_install_dump
+          path: dump/
+          retention-days: 7
       - name: Check paas
+        id: test_check_paas
         run: ./bin/kubemarine check_paas -c ./ci/config.yaml
+      - name: Collect install artifacts
+        if: failure() && steps.test_check_paas.outcome == 'failure'
+        uses: actions/upload-artifact@v3
+        with:
+          name: test_check_paas_dump
+          path: dump/
+          retention-days: 7
