copy dumps on error

--- a/.github/workflows/test_install.yaml
+++ b/.github/workflows/test_install.yaml
@@ -37,16 +37,19 @@ jobs:
         continue-on-error: true
         run: ./bin/kubemarine check_iaas -c ./ci/default_config.yaml
       - name: Copy check iaas dumps
+        if: steps.test_check_iaas.outcome != 'skipped'
         run: mkdir -p results && cp -a dump/. results/check_iaas_dump/
       - name: Install default cluster
         id: test_default_install
         run: ./bin/kubemarine install -c ./ci/default_config.yaml --disable-cumulative-points
       - name: Copy default install dumps
+        if: steps.test_default_install.outcome != 'skipped'
         run: mkdir -p results && cp -a dump/. results/default_install_dump/
       - name: Check paas default cluster
         id: test_default_check_paas
         run: ./bin/kubemarine check_paas -c ./ci/default_config.yaml
       - name: Copy default check paas dumps
+        if: steps.test_default_check_paas.outcome != 'skipped'
         run: mkdir -p results && cp -a dump/. results/default_check_paas_dump/
       - name: Collect dump artifacts
         if: failure()
