--- a/.github/workflows/test_install.yaml
+++ b/.github/workflows/test_install.yaml
@@ -43,7 +43,7 @@ jobs:
         id: test_default_install
         run: ./bin/kubemarine install -c ./ci/default_config.yaml --disable-cumulative-points
       - name: Copy default install dumps
-        if: failure() && steps.test_default_install.outcome == 'failure'
+        if: steps.test_default_install.outcome == 'failure'
         run: mkdir -p results && cp -a dump/. results/default_install_dump/
       - name: Check paas default cluster
         id: test_default_check_paas
