--- a/.github/workflows/test_install.yaml
+++ b/.github/workflows/test_install.yaml
@@ -21,7 +21,7 @@ jobs:
           cp ~/.ssh/id_rsa.pub ~/.ssh/authorized_keys
           ssh-keyscan -H 172.17.0.1 >> ~/.ssh/known_hosts
       - name: Add ip alias
-        run: ifconfig docker0:0 172.17.1.1 up
+        run: sudo ifconfig docker0:0 172.17.1.1 up
       - name: Test ssh connection
         run: ssh -i ~/.ssh/id_rsa 172.17.0.1 echo "Test"
       - name: Set up Python ${{ matrix.python-version }}
