--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -312,103 +312,81 @@ services:
 
   packages:
     cache_versions: true
+    mandatory:
+      conntrack: true
+      iptables: true
+      openssl: true
+      curl: true
+      unzip: true
+      semanage: true
+      kmod: true
     package_manager:
       replace-repositories: false
     associations:
       debian:
         docker:
-          executable_name: 'docker'
           package_name:
             - 'docker-ce={{ globals.compatibility_map.software.docker[services.kubeadm.kubernetesVersion].version_debian }}'
             - 'docker-ce-cli={{ globals.compatibility_map.software.docker[services.kubeadm.kubernetesVersion].version_debian }}'
             - 'containerd.io={{ globals.compatibility_map.software.containerdio[services.kubeadm.kubernetesVersion].version_debian }}'
-          service_name: 'docker'
-          config_location: '/etc/docker/daemon.json'
         containerd:
-          executable_name: 'containerd'
           package_name:
             - 'containerd={{ globals.compatibility_map.software.containerd[services.kubeadm.kubernetesVersion].version_debian }}'
             - 'podman={{ globals.compatibility_map.software.podman[services.kubeadm.kubernetesVersion].version_debian }}'
-          service_name: 'containerd'
-          config_location: '/etc/containerd/config.toml'
         haproxy:
           executable_name: 'haproxy'
           package_name: 'haproxy={{ globals.compatibility_map.software.haproxy[services.kubeadm.kubernetesVersion].version_debian }}'
           service_name: 'haproxy'
-          config_location: '/etc/haproxy/haproxy.cfg'
         keepalived:
-          executable_name: 'keepalived'
           package_name: 'keepalived={{ globals.compatibility_map.software.keepalived[services.kubeadm.kubernetesVersion].version_debian }}'
-          service_name: 'keepalived'
-          config_location: '/etc/keepalived/keepalived.conf'
         audit:
-          executable_name: 'auditctl'
           package_name: 'auditd'
-          service_name: 'auditd'
-          config_location: '/etc/audit/rules.d/predefined.rules'
+        conntrack:
+          package_name: 'conntrack'
       rhel:
         docker:
-          executable_name: 'docker'
           package_name:
             - 'docker-ce-{{ globals.compatibility_map.software.docker[services.kubeadm.kubernetesVersion].version_rhel }}'
             - 'docker-ce-cli-{{ globals.compatibility_map.software.docker[services.kubeadm.kubernetesVersion].version_rhel }}'
             - 'containerd.io-{{ globals.compatibility_map.software.containerdio[services.kubeadm.kubernetesVersion].version_rhel }}'
-          service_name: 'docker'
-          config_location: '/etc/docker/daemon.json'
         containerd:
-          executable_name: 'containerd'
           package_name:
             - 'containerd.io-{{ globals.compatibility_map.software.containerdio[services.kubeadm.kubernetesVersion].version_rhel }}'
             - 'podman-{{ globals.compatibility_map.software.podman[services.kubeadm.kubernetesVersion].version_rhel }}'
-          service_name: 'containerd'
-          config_location: '/etc/containerd/config.toml'
         haproxy:
           executable_name: '/opt/rh/rh-haproxy18/root/usr/sbin/haproxy'
           package_name: 'rh-haproxy18-haproxy-{{ globals.compatibility_map.software.haproxy[services.kubeadm.kubernetesVersion].version_rhel }}'
           service_name: 'rh-haproxy18-haproxy'
-          config_location: '/etc/haproxy/haproxy.cfg'
         keepalived:
-          executable_name: 'keepalived'
           package_name: 'keepalived-{{ globals.compatibility_map.software.keepalived[services.kubeadm.kubernetesVersion].version_rhel }}'
-          service_name: 'keepalived'
-          config_location: '/etc/keepalived/keepalived.conf'
         audit:
-          executable_name: 'auditctl'
           package_name: 'audit'
-          service_name: 'auditd'
-          config_location: '/etc/audit/rules.d/predefined.rules'
+        conntrack:
+          package_name: 'conntrack-tools'
+        semanage:
+          package_name: 'policycoreutils-python'
       rhel8:
         docker:
-          executable_name: 'docker'
           package_name:
             - 'docker-ce-{{ globals.compatibility_map.software.docker[services.kubeadm.kubernetesVersion].version_rhel8 }}'
             - 'docker-ce-cli-{{ globals.compatibility_map.software.docker[services.kubeadm.kubernetesVersion].version_rhel8 }}'
             - 'containerd.io-{{ globals.compatibility_map.software.containerdio[services.kubeadm.kubernetesVersion].version_rhel8 }}'
-          service_name: 'docker'
-          config_location: '/etc/docker/daemon.json'
         containerd:
-          executable_name: 'containerd'
           package_name:
             - 'containerd.io-{{ globals.compatibility_map.software.containerdio[services.kubeadm.kubernetesVersion].version_rhel8 }}'
             - 'podman-{{ globals.compatibility_map.software.podman[services.kubeadm.kubernetesVersion].version_rhel8 }}'
-          service_name: 'containerd'
-          config_location: '/etc/containerd/config.toml'
         haproxy:
           executable_name: '/usr/sbin/haproxy'
           package_name: 'haproxy-{{ globals.compatibility_map.software.haproxy[services.kubeadm.kubernetesVersion].version_rhel8 }}'
           service_name: 'haproxy'
-          config_location: '/etc/haproxy/haproxy.cfg'
         keepalived:
-          executable_name: 'keepalived'
           package_name: 'keepalived-{{ globals.compatibility_map.software.keepalived[services.kubeadm.kubernetesVersion].version_rhel8 }}'
-          service_name: 'keepalived'
-          config_location: '/etc/keepalived/keepalived.conf'
         audit:
-          executable_name: 'auditctl'
           package_name: 'audit'
-          service_name: 'auditd'
-          config_location: '/etc/audit/rules.d/predefined.rules'
- 
+        conntrack:
+          package_name: 'conntrack-tools'
+        semanage:
+          package_name: 'policycoreutils-python-utils'
 
 plugin_defaults:
   installation: {}
