--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -6,6 +6,9 @@ nodes: []
 
 public_cluster_ip: '{{ control_plain.external }}'
 
+system:
+  kernel_version: '5.4.0-135-generic'
+
 services:
   kubeadm_kubelet:
     apiVersion: kubelet.config.k8s.io/v1beta1
@@ -62,8 +65,6 @@ services:
         RootDistanceMaxSec: 5
         PollIntervalMinSec: 32
         PollIntervalMaxSec: 2048
-
-  kernel_version: 5.4.0-135-generic
 
   kernel_security:
     selinux:
