fix json schemas

--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -64,7 +64,7 @@ services:
         PollIntervalMaxSec: 2048
 
   kernel_linux:
-    version: '5.4.0-135-generic'
+    version: 5.4.0-135-generic
 
   kernel_security:
     selinux:
