[PSUPCLPL-11612] fix calico_yaml path in case of non-default dump_location (#337)
* fix calico_yaml path in case of non-default dump_location

* make calico_yaml path OS independent

* Implement applying of generated calico manifest from memory

* Avoid utf-8 symbols in calico descriptions

Co-authored-by: ilia1243 <8808144+ilia1243@users.noreply.github.com>

--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -403,7 +403,7 @@ plugins:
             method: apply_calico_yaml
             arguments:
               calico_original_yaml: 'plugins/yaml/calico-{{ plugins.calico.version }}.yaml.original'
-              calico_yaml: './dump/calico-{{ plugins.calico.version }}.yaml'
+              calico_yaml: 'calico-{{ plugins.calico.version }}.yaml'
         - expect:
             daemonsets:
               - calico-node
