--- a/kubemarine/resources/configurations/globals.yaml
+++ b/kubemarine/resources/configurations/globals.yaml
@@ -634,7 +634,7 @@ compatibility_map:
         versions:
           - '20.04'
           - '22.04'
-        bad_kernel:
+        unstable_kernel:
           - '5.4.0-132-generic'
     debian:
       - os_family: 'debian'
