--- a/kubemarine/resources/configurations/globals.yaml
+++ b/kubemarine/resources/configurations/globals.yaml
@@ -691,6 +691,8 @@ compatibility_map:
         versions:
           - '20.04'
           - '22.04'
+        unstable_kernel:
+          - '5.4.0-132-generic'
     debian:
       - os_family: 'debian'
         versions:
