--- a/.github/workflows/test_install.yaml
+++ b/.github/workflows/test_install.yaml
@@ -44,7 +44,7 @@ jobs:
         id: test_check_paas
         run: ./bin/kubemarine check_paas -c ./ci/default_config.yaml  --dump-location ./results/check_paas_dump/
       - name: Change not-recommended symbols in dump files
-        run: rename 's/[:]/_/g' ./results/*
+        run: rename 's/[:]/_/g' ./results/*/*
       - name: Collect dump artifacts
         if: true
         uses: actions/upload-artifact@v3
@@ -95,7 +95,7 @@ jobs:
         id: test_check_paas
         run: ./bin/kubemarine check_paas -c ./ci/extended_config.yaml --dump-location ./results/check_paas_dump/
       - name: Change not-recommended symbols in dump files
-        run: rename 's/[:]/_/g' ./results/*
+        run: rename 's/[:]/_/g' ./results/*/*
       - name: Collect dump artifacts
         if: true
         uses: actions/upload-artifact@v3
