--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,20 +1,50 @@
-name: Make release with Build binaries and Publish Artifacts
+name: Make Release and/or Publish Artifacts
 
 on:
-  release:
-    types:
-      - published
   push:
     branches:
       - 'main'
-
-env:
-  TAG_NAME: ${{ github.event.release.tag_name || (github.ref == 'refs/heads/main' && 'main') || 'unknown' }}
+    tags:
+      - '*'
 
 jobs:
-  publish-binary:
+  verify:
     runs-on: ubuntu-latest
-    if: github.event.release
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v2
+      - name: Check Versions Consistency
+        if: startsWith(github.ref, 'refs/tags')
+        run: |
+          VERSION=$(cat kubemarine/version)
+          if [[ $VERSION != "${{ github.ref_name }}" ]]; then
+            echo -e "\033[91mGit tag does not equal to kubemarine/version\033[0m"
+            exit 1;
+          fi
+
+  prebuild-package:
+    runs-on: ubuntu-latest
+    needs: verify
+    if: startsWith(github.ref, 'refs/tags')
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v2
+      - name: Build Package via Docker
+        run: |
+          docker build -t kubemarine --build-arg BUILD_TYPE=package --no-cache .
+          CONTAINER_ID=$(docker create kubemarine)
+          docker cp "${CONTAINER_ID}:/opt/kubemarine/dist" dist
+          docker rm -v "${CONTAINER_ID}"
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: dist
+          path: ./dist
+
+  create-release:
+    runs-on: ubuntu-latest
+    needs: prebuild-package
+    if: startsWith(github.ref, 'refs/tags')
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
@@ -24,15 +54,46 @@ jobs:
           CONTAINER_ID=$(docker create kubemarine)
           docker cp "${CONTAINER_ID}:/opt/kubemarine/dist/kubemarine" kubemarine_exe
           docker rm -v "${CONTAINER_ID}"
-      - name: Upload Release Asset
+
+      - name: Download Package
+        uses: actions/download-artifact@v3
+        with:
+          name: dist
+          path: ./dist
+      - name: Pack Package
+        run: zip -r package.zip dist
+
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: ${{ github.ref_name }}
+          draft: false
+          prerelease: true
+
+      - name: Upload Executable
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-            upload_url: ${{ github.event.release.upload_url }}
+            upload_url: ${{ steps.create_release.outputs.upload_url }}
             asset_path: ./kubemarine_exe
             asset_name: kubemarine
             asset_content_type: application/x-executable
+
+      - name: Upload Package
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+            upload_url: ${{ steps.create_release.outputs.upload_url }}
+            asset_path: ./package.zip
+            asset_name: package.zip
+            asset_content_type: application/zip
+
 #      - name: PyInstaller win64
 #        id: win64
 #        uses: action-python/pyinstaller-py3.8@win64
@@ -68,8 +129,9 @@ jobs:
 
   publish-docker:
     runs-on: ubuntu-latest
+    needs: verify
     steps:
       - uses: actions/checkout@v2
-      - run: docker build . -t ghcr.io/netcracker/kubemarine:${{ env.TAG_NAME }}
+      - run: docker build . -t ghcr.io/netcracker/kubemarine:${{ github.ref_name }}
       - run: echo ${{ secrets.GITHUB_TOKEN }} | docker login https://ghcr.io -u ${GITHUB_ACTOR} --password-stdin
-      - run: docker push ghcr.io/netcracker/kubemarine:${{ env.TAG_NAME }}
+      - run: docker push ghcr.io/netcracker/kubemarine:${{ github.ref_name }}
