--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -22,10 +22,9 @@ jobs:
             exit 1;
           fi
 
-  prebuild-package:
+  build-package:
     runs-on: ubuntu-latest
     needs: verify
-    if: startsWith(github.ref, 'refs/tags')
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
@@ -43,7 +42,7 @@ jobs:
 
   create-release:
     runs-on: ubuntu-latest
-    needs: prebuild-package
+    needs: build-package
     if: startsWith(github.ref, 'refs/tags')
     steps:
       - name: Checkout Repo
@@ -126,6 +125,46 @@ jobs:
 #          asset_path: ${{ steps.win64.outputs.location }}
 #          asset_name: ${{ steps.win64.outputs.filename }}
 #          asset_content_type: ${{ steps.win64.outputs.content_type }}
+
+  test-package:
+    runs-on: ${{ matrix.os }}
+    needs: build-package
+    strategy:
+      matrix:
+        os: [ macos-latest, ubuntu-latest, windows-latest ]
+        python-version:
+          - "3.7"
+          - "3.8"
+          - "3.9"
+          - "3.10"
+          - "3.11"
+        include:
+          - wheel: 'dist/*.whl'
+            remove_files_script: 'find . -not -path "./test*" -not -path "./examples*" -delete'
+          - os: windows-latest
+            wheel: '(get-item dist\*.whl).FullName'
+            remove_files_script: 'Get-ChildItem -Exclude test,examples | Remove-Item -Recurse -Force'
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v2
+      - name: Keep Testing Files
+        run: ${{ matrix.remove_files_script }}
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Download Package
+        uses: actions/download-artifact@v3
+        with:
+          name: dist
+          path: ./dist
+      - name: Install Package
+        run: python -m pip install ${{ matrix.wheel }}
+      - name: Enable UTF-8 on Windows
+        run: echo "PYTHONIOENCODING=utf-8" >> $env:GITHUB_ENV
+        if: runner.os == 'Windows'
+      - name: Run Tests
+        run: python -m unittest discover -s test/unit -t test/unit
 
   publish-docker:
     runs-on: ubuntu-latest
