--- a/.github/workflows/test_install.yaml
+++ b/.github/workflows/test_install.yaml
@@ -44,6 +44,7 @@ jobs:
         id: test_check_paas
         run: ./bin/kubemarine check_paas -c ./ci/default_config.yaml  --dump-location ./results/check_paas_dump/
       - name: Change not-recommended symbols in dump files
+        if: failure()
         run: rename 's/[:]/_/g' ./results/*/*
       - name: Collect dump artifacts
         if: failure()
@@ -95,6 +96,7 @@ jobs:
         id: test_check_paas
         run: ./bin/kubemarine check_paas -c ./ci/extended_config.yaml --dump-location ./results/check_paas_dump/
       - name: Change not-recommended symbols in dump files
+        if: failure()
         run: rename 's/[:]/_/g' ./results/*/*
       - name: Collect dump artifacts
         if: failure()
