--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -26,6 +26,7 @@ jobs:
       - name: Build Docker Image
         run: docker build -t kubemarine --no-cache .
       - name: Run Selftest
+        # selftest of image internally runs selftest of package
         run: docker run kubemarine selftest
   selftest-binary:
     needs: license
@@ -54,13 +55,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: docker build -t kubemarine --build-arg BUILD_TYPE=test --no-cache .
-      - run: docker run --entrypoint=/bin/bash kubemarine -c "python3 /usr/local/bin/coverage run -m unittest discover -s /opt/kubemarine/test/unit -t /opt/kubemarine/test/unit; python3 /usr/local/bin/coverage report -m" > /tmp/report.txt
-      - run: cat /tmp/report.txt; PERCENTAGE=$(cat /tmp/report.txt | tail -1 | awk '{print $4}' | tr -dc '0-9')
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.9"
+      # Install coverage and kubemarine with all dependencies except ansible.
+      # Then uninstall only kubemarine to avoid ambiguity and to surely run coverage on sources.
+      - run: pip install coverage . && pip uninstall -y kubemarine
+      - run: coverage run -m unittest discover -s test/unit -t test/unit; coverage report -m
   linter:
     needs: license
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: docker build -t kubemarine --build-arg BUILD_TYPE=test --no-cache .
-      - run: docker run --entrypoint=/bin/bash kubemarine -c "/usr/local/bin/pylint kubemarine test --disable fixme || exit 0"
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.9"
+      # Install pylint and kubemarine with all dependencies except ansible.
+      # Then uninstall only kubemarine to avoid ambiguity and to surely run pylint on sources.
+      - run: pip install pylint . && pip uninstall -y kubemarine
+      - run: pylint kubemarine test --disable fixme || exit 0
