Implement binary build for Windows/MacOS/old linux

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,18 +25,23 @@ classifiers = [
     "Environment :: Console",
 ]
 keywords = ["kubernetes", "devops", "administration", "helm"]
+# Any change in dependencies should be reflected in macos11_build_prepare.sh
+# Also, the binary build for arm64-based macOS should be manually verified.
 dependencies = [
+    # cffi and cryptography are required by paramiko
+    "cffi==1.15.*",
     "PyYAML==6.0",
+    "MarkupSafe==2.1.*",
     "deepmerge==1.0.*",
     "fabric==2.6.*",
     "jinja2==3.1.*",
-    "MarkupSafe==2.0.*",
     "invoke==1.6.*",
     "ruamel.yaml==0.17.*",
     "pygelf==0.4.*",
     "toml==0.10.*",
     "python-dateutil==2.8.*",
-    "deepdiff==5.7.*",
+    "deepdiff==6.2.*",
+    "ordered-set==4.1.*",
     # cryptography is a transitive dependency of paramiko. Fix version to avoid unexpected deprecation warnings.
     "cryptography==39.0.*",
     "paramiko==2.11.*",
