[MANOPD-83794] node-specific settings for control-plane via patches (#352)
* Add node-specific control-plane setttings via patches functionality

* Add to IN kubeadm_patches chapter

* Change kubeadm_patches syntax

* Add JSON scheme for kubeadm_patches

* Adjust kubeadm_patches JSON scheme

* fix system_prepare_policy to work with kubeadm patches

* optimize kubeadm patchfile templates

* optimize kubeadm patchfile templates

* add kubeadm patches upload in system_prepare_policy

* Hardening kubeadm_patches JSON schema

* Hardening kubeadm_patches JSON schema

* add kubemarine/templates/patches to kubemarine.spec

* IN update

* adjust get_patched_flags_for_control_plane_item()

--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -17,7 +17,8 @@ services:
   kubeadm_flags:
     ignorePreflightErrors: Port-6443,CoreDNSUnsupportedPlugins
   kubeadm:
-    apiVersion: kubeadm.k8s.io/v1beta2
+    # for patches functionality we need v1beta3 which is available since k8s v1.22 only
+    apiVersion: '{% if "v1.21" in services["kubeadm"]["kubernetesVersion"] %}kubeadm.k8s.io/v1beta2{% else %}kubeadm.k8s.io/v1beta3{% endif %}'
     kind: ClusterConfiguration
     kubernetesVersion: v1.24.2
     controlPlaneEndpoint: '{{ cluster_name }}:6443'
@@ -52,6 +53,13 @@ services:
       extraArgs:
         profiling: "false"
         terminated-pod-gc-threshold: "1000"
+  kubeadm_patches:
+    # bind-address flag for apiServer is set in the code
+    apiServer: []
+    etcd: []
+    controllerManager: []
+    scheduler: []
+    kubelet: []
 
   ntp:
     chrony:
