--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,20 +1,49 @@
-name: Make release with Build binaries and Publish Artifacts
+name: Make Release and/or Publish Artifacts
 
 on:
-  release:
-    types:
-      - published
   push:
     branches:
       - 'main'
-
-env:
-  TAG_NAME: ${{ github.event.release.tag_name || (github.ref == 'refs/heads/main' && 'main') || 'unknown' }}
+    tags:
+      - '*'
 
 jobs:
-  publish-binary:
+  verify:
     runs-on: ubuntu-latest
-    if: github.event.release
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v2
+      - name: Check Versions Consistency
+        if: startsWith(github.ref, 'refs/tags')
+        run: |
+          VERSION=$(cat kubemarine/version)
+          if [[ $VERSION != "${{ github.ref_name }}" ]]; then
+            echo -e "\033[91mGit tag does not equal to kubemarine/version\033[0m"
+            exit 1;
+          fi
+
+  build-package:
+    runs-on: ubuntu-latest
+    needs: verify
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v2
+      - name: Build Package via Docker
+        run: |
+          docker build -t kubemarine --build-arg BUILD_TYPE=package --no-cache .
+          CONTAINER_ID=$(docker create kubemarine)
+          docker cp "${CONTAINER_ID}:/opt/kubemarine/dist" dist
+          docker rm -v "${CONTAINER_ID}"
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: dist
+          path: ./dist
+
+  create-release:
+    runs-on: ubuntu-latest
+    needs: build-package
+    if: startsWith(github.ref, 'refs/tags')
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
@@ -24,15 +53,46 @@ jobs:
           CONTAINER_ID=$(docker create kubemarine)
           docker cp "${CONTAINER_ID}:/opt/kubemarine/dist/kubemarine" kubemarine_exe
           docker rm -v "${CONTAINER_ID}"
-      - name: Upload Release Asset
+
+      - name: Download Package
+        uses: actions/download-artifact@v3
+        with:
+          name: dist
+          path: ./dist
+      - name: Pack Package
+        run: zip -r package.zip dist
+
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: ${{ github.ref_name }}
+          draft: false
+          prerelease: true
+
+      - name: Upload Executable
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-            upload_url: ${{ github.event.release.upload_url }}
+            upload_url: ${{ steps.create_release.outputs.upload_url }}
             asset_path: ./kubemarine_exe
             asset_name: kubemarine
             asset_content_type: application/x-executable
+
+      - name: Upload Package
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+            upload_url: ${{ steps.create_release.outputs.upload_url }}
+            asset_path: ./package.zip
+            asset_name: package.zip
+            asset_content_type: application/zip
+
 #      - name: PyInstaller win64
 #        id: win64
 #        uses: action-python/pyinstaller-py3.8@win64
@@ -66,10 +126,51 @@ jobs:
 #          asset_name: ${{ steps.win64.outputs.filename }}
 #          asset_content_type: ${{ steps.win64.outputs.content_type }}
 
+  test-package:
+    runs-on: ${{ matrix.os }}
+    needs: build-package
+    strategy:
+      matrix:
+        os: [ macos-latest, ubuntu-latest, windows-latest ]
+        python-version:
+          - "3.7"
+          - "3.8"
+          - "3.9"
+          - "3.10"
+          - "3.11"
+        include:
+          - wheel: 'dist/*.whl'
+            remove_files_script: 'find . -not -path "./test*" -not -path "./examples*" -delete'
+          - os: windows-latest
+            wheel: '(get-item dist\*.whl).FullName'
+            remove_files_script: 'Get-ChildItem -Exclude test,examples | Remove-Item -Recurse -Force'
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v2
+      - name: Keep Testing Files
+        run: ${{ matrix.remove_files_script }}
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Download Package
+        uses: actions/download-artifact@v3
+        with:
+          name: dist
+          path: ./dist
+      - name: Install Package
+        run: python -m pip install ${{ matrix.wheel }}
+      - name: Enable UTF-8 on Windows
+        run: echo "PYTHONIOENCODING=utf-8" >> $env:GITHUB_ENV
+        if: runner.os == 'Windows'
+      - name: Run Tests
+        run: python -m unittest discover -s test/unit -t test/unit
+
   publish-docker:
     runs-on: ubuntu-latest
+    needs: verify
     steps:
       - uses: actions/checkout@v2
-      - run: docker build . -t ghcr.io/netcracker/kubemarine:${{ env.TAG_NAME }}
+      - run: docker build . -t ghcr.io/netcracker/kubemarine:${{ github.ref_name }}
       - run: echo ${{ secrets.GITHUB_TOKEN }} | docker login https://ghcr.io -u ${GITHUB_ACTOR} --password-stdin
-      - run: docker push ghcr.io/netcracker/kubemarine:${{ env.TAG_NAME }}
+      - run: docker push ghcr.io/netcracker/kubemarine:${{ github.ref_name }}
