[PSUPCLPL-11680] adjust plugins and nodes timeouts (#367)
* adjust plugins and nodes timeouts

* fix hyperlinks to IN

* add globals: {} section to cluster.yaml

* fix globals.jsom schema

* adjust excep_pod's exception message

* move configurable global variables to defaults.yaml

* Minor fixes in JSON schema for globals

---------

Co-authored-by: ilia1243 <8808144+ilia1243@users.noreply.github.com>

--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -1,5 +1,13 @@
 vrrp_ips: []
 
+globals: 
+  nodes:
+    ready:
+      timeout: 5
+      retries: 15
+    boot:
+     timeout: 600
+
 node_defaults: {}
 
 nodes: []
@@ -417,9 +425,12 @@ plugins:
             deployments:
               - calico-kube-controllers
             pods:
-              - coredns
-              - calico-kube-controllers
-              - calico-node
+              list:
+                - coredns
+                - calico-kube-controllers
+                - calico-node
+              timeout: 5
+              retries: 150
         - thirdparty: /usr/bin/calicoctl
         - shell:
             command: mkdir -p /etc/calico
