--- a/kubemarine/resources/configurations/globals.yaml
+++ b/kubemarine/resources/configurations/globals.yaml
@@ -44,6 +44,10 @@ etcd:
 kubernetes:
   temporary_exceptions:
     - has prevented the request from succeeding
+deployments:
+  expect:
+    timeout: 5
+    retries: 30
 pods:
   allowed_failures: 10
   expect:
@@ -66,13 +70,9 @@ nodes:
     kubernetes_version:
       timeout: 10
       retries: 30
-  ready:
-    retries: 15
-    timeout: 5
   boot:
     reboot_command: 'reboot 2>/dev/null >/dev/null &'
     defaults:
-      timeout: 600
       delay_period: 5
   drain:
     timeout: 10
